--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: 4.0.5
+  provider: ^4.3.2+2
   intl: ^0.16;1
 
   # The following adds the Cupertino Icons font to your application.
