--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,21 +17,27 @@ environment:
   sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
+  dio: ^3.0.10
+  flutter_mobx: ^1.1.0+2
+  mobx: ^1.2.1+3
+  flutter_modular: ^2.0.1
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  intl: ^0.16;1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  mockito: ^4.1.3
+  modular_codegen: ^2.0.0+1
+  mobx_codegen: ^1.1.1+1
+  build_runner: ^1.10.1
 #  build_web_compilers: ">=2.6.1 <3.0.0"
 #  build_runner: ">=1.6.2 <2.0.0"
   flutter_test:
     sdk: flutter
 
+scripts:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
